# rust-hacker-clone

./: .env  Cargo.toml
migrations/2021-06-11-061350_hackerclone/: down.sql
src/: main.rs  models.rs
templates/: base.html  index.html  login.html  post.html  signup.html
