[package]
name = "rust-hacker-clone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.10"
serde = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
actix-identity = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
